[package]
name = "anti_sandbox"
version = "1.0.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.30.5"
windows = { version = "0.52.0", features = ["Win32_System_SystemInformation", "Win32_Foundation", "Win32_System_Registry"] }